Update end points

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<li class="tk-loot" onClick="loadTK()">TK</li>
 				<li class="ssc-loot" onClick="loadSSC()">SSC</li>
 				<li class="gruul-loot" onClick="loadGruul()">Gruul</li>
-				<li class="magth-loot" onClick="loadMagth()">Mag</li>
+				<li class="magth-loot" onClick="loadMag()">Mag</li>
 			</ul>
 		</div>
 		<div class="loot-rules header">
