Update for BT and Hyjal

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 	<div class="wrapper">
 		<div class="navigation">
 			<ul>
+				<li class="tk-loot" onClick="loadBT()">BT</li>
+				<li class="tk-loot" onClick="loadHyjal()">Hyjal</li>
 				<li class="tk-loot" onClick="loadTK()">TK</li>
 				<li class="ssc-loot" onClick="loadSSC()">SSC</li>
 				<li class="gruul-loot" onClick="loadGruul()">Gruul</li>
