--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	<div class="wrapper">
 		<div class="navigation">
 			<ul>
+				<li class="tk-loot" onClick="loadSWP()">Sunwell</li>
 				<li class="tk-loot" onClick="loadBT()">BT</li>
 				<li class="tk-loot" onClick="loadHyjal()">Hyjal</li>
 				<li class="tk-loot" onClick="loadTK()">TK</li>
